--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+flask = "^2.2.2"
+psycopg2 = "^2.9.5"
+flask-sqlalchemy = "^3.0.2"
 
 
 [build-system]
