Muokkaa tietokantarajapinta käyttämään SQLAlchemya

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,13 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.8"
 flask = "^2.2.2"
-psycopg2 = "^2.9.5"
+psycopg2-binary = "^2.9.5"
 python-dotenv = "^0.21.0"
+flask-sqlalchemy = "^3.0.2"
 
+
+[tool.poetry.group.dev.dependencies]
+autopep8 = "^2.0.0"
 
 [build-system]
 requires = ["poetry-core"]
