--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ flask = "^2.2.2"
 psycopg2-binary = "^2.9.5"
 python-dotenv = "^0.21.0"
 flask-sqlalchemy = "^3.0.2"
+gunicorn = "^20.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
