--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ gunicorn = "^20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.0"
+pytest = "^7.2.0"
+coverage = "^6.5.0"
+pytest-dotenv = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core"]
