--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,16 +20,20 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Setup Python
-      - uses: actions/setup-python@v2.3.3
-      - with:
+        uses: actions/setup-python@v2.3.3
+        with:
           python-version: 3.8
       
       - name: Install Poetry
-      - run: pip install poetry
+        run: pip install poetry
       
       - name: Install dependencies
-      - run: poetry install
+        run: poetry install
       
       - name: Run unit tests
-      - run: poetry run coverage run --branch -m pytest
+        run: poetry run pytest src
+        env:
+          DATABASE_URL: postgresql://postgres@localhost/postgres
+      
+      
       
