--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,14 @@ python-dotenv = "^0.21.0"
 flask-sqlalchemy = "^3.0.2"
 gunicorn = "^20.1.0"
 
-
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.0"
 pytest = "^7.2.0"
-coverage = "^6.5.0"
 pytest-dotenv = "^0.5.2"
+coverage = "^6.5.0"
+robotframework = "^6.0.1"
+robotframework-seleniumlibrary = "^6.0.0"
+requests = "^2.28.1"
 
 [build-system]
 requires = ["poetry-core"]
